[gd_scene load_steps=2 format=2]

[ext_resource path="res://OptionsMenu.gd" type="Script" id=1]

[node name="OptionsMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -192.0
margin_right = 320.0
margin_bottom = 192.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.196078, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.45
anchor_top = 0.2
anchor_right = 0.55
anchor_bottom = 0.8
margin_left = -132.8
margin_right = 141.2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 338.0
margin_bottom = 14.0
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 18.0
margin_right = 338.0
margin_bottom = 82.0
size_flags_vertical = 0
custom_constants/separation = 64

[node name="Resolution" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 32.0
margin_top = 86.0
margin_right = 306.0
margin_bottom = 110.0
size_flags_horizontal = 4
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Resolution"]
margin_right = 68.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resolution"
align = 2
valign = 1

[node name="Picker" type="OptionButton" parent="VBoxContainer/Resolution"]
margin_left = 78.0
margin_top = 2.0
margin_right = 170.0
margin_bottom = 22.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "600 x 800"
align = 1
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenBox" type="CheckBox" parent="VBoxContainer/Resolution"]
margin_left = 180.0
margin_right = 274.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 114.0
margin_right = 338.0
margin_bottom = 146.0
size_flags_vertical = 0
custom_constants/separation = 32

[node name="VolumeBGM" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 338.0
margin_bottom = 166.0

[node name="Label" type="Label" parent="VBoxContainer/VolumeBGM"]
margin_top = 1.0
margin_right = 169.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Background Music Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/VolumeBGM"]
margin_left = 173.0
margin_right = 318.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label2" type="Label" parent="VBoxContainer/VolumeBGM"]
margin_left = 322.0
margin_top = 1.0
margin_right = 338.0
margin_bottom = 15.0
text = "69"

[node name="VolumeSFX" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 338.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="VBoxContainer/VolumeSFX"]
margin_top = 1.0
margin_right = 157.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Sound Effect Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/VolumeSFX"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label2" type="Label" parent="VBoxContainer/VolumeSFX"]
margin_left = 322.0
margin_top = 1.0
margin_right = 338.0
margin_bottom = 15.0
text = "69"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 190.0
margin_right = 338.0
margin_bottom = 222.0
size_flags_vertical = 0
custom_constants/separation = 32

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 338.0
margin_bottom = 246.0
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 62.0
margin_right = 104.0
margin_bottom = 20.0
size_flags_horizontal = 6
size_flags_vertical = 14
text = "Back"

[node name="ApplyButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 230.0
margin_right = 278.0
margin_bottom = 20.0
size_flags_horizontal = 6
size_flags_vertical = 14
text = "Apply"
